# Digital-Image-Processing_V1.0

./: .gitignore
DSP/: GUI-test.ui  Main_GUI.py  Main_UI.tcl  Main_UI.tcl.tmp  Signal_Generater.py  test.py
DSP/C_CPP/: Hello.c  Mouse.c
DSP/Python/: Image_show.py  image_cursor.py  image_pixel_show.py  test.py
Docs/Lab/: 11301Year 2 (PE3)_Lab.pptx  Lab3.py
NiosV/: .~lock.Pin_DE10.csv#  BSP_and_APP_config.txt  Pin_DE10.csv
NiosV/Lab0/: NiosV.qpf  NiosV.qsf  NiosV.qsys  NiosV.qws  NiosV.sopcinfo  NiosV_top.bdf
NiosV/Lab0/db/: .cmp.kpt  (+202 more)
NiosV/Lab1/: NiosV.qpf  NiosV.qsf  NiosV.qsys  NiosV.qws  NiosV.sopcinfo  NiosV_top.bdf  Niosv.bdf
NiosV/Lab1/software/app/: .cproject  CMakeLists.txt  hello.c
NiosV/Lab2/: NiosV.qpf  NiosV.qsf  NiosV.qsys  NiosV.qws  NiosV.sopcinfo  NiosV_top.bdf
NiosV/Lab3/: NiosV.qpf  NiosV.qsf  NiosV.qsys  NiosV.qws  NiosV.sopcinfo  NiosV_top.bdf
NiosV/Lab4/: NiosV.ipregen.rpt  NiosV.qpf  NiosV.qsf  NiosV.qsys  NiosV.sopcinfo  NiosV_top.bdf  serv_req_info.txt
NiosV/Lab4/software/app/: .cproject  .project  CMakeLists.txt  main.c
NiosV/Lab4_1/: NiosV.qpf  NiosV.qsf  NiosV.qsys  NiosV.qws  NiosV.sopcinfo
altera/: altera_components.ipx
altera/alt_pma/: alt_pma_wizard.lst
altera/altchip_id/: altchip_id_wizard.lst
altera/altdq_dqs2/: altdq_dqs2_acv_arriav.sv  altdq_dqs2_acv_arriav_connect_to_hard_phy.sv  altdq_dqs2_acv_arriav_connect_to_hard_phy_lpddr2.sv  altdq_dqs2_acv_arriav_lpddr2.sv  altdq_dqs2_acv_arriav_quarter_rate_mode.sv  altdq_dqs2_acv_connect_to_hard_phy_cyclonev_lpddr2.sv  altdq_dqs2_acv_cyclonev_quarter_rate_mode.sv  altdq_dqs2_arriaiigx_ddio_3reg_family_has_no_dynconf.sv  altdq_dqs2_arriaiigx_ddio_3reg_family_has_no_dynconf_use_offset_ctrl.sv  altdq_dqs2_arriaiigz_ddio_3reg.sv  altdq_dqs2_arriaiigz_ddio_3reg_use_offset_ctrl.sv  altdq_dqs2_arriavgz.sv  altdq_dqs2_arriavgz_use_offset_ctrl.sv  altdq_dqs2_arriavgz_use_shadow_regs.sv  altdq_dqs2_ddio_3reg_stratixiii.sv  altdq_dqs2_ddio_3reg_stratixiii_use_offset_ctrl.sv  altdq_dqs2_ddio_3reg_stratixiv_use_offset_ctrl.sv  altdq_dqs2_hw.tcl  altdq_dqs2_stratixv.sv  altdq_dqs2_stratixv_use_external_write_strobe_ports.sv  altdq_dqs2_stratixv_use_offset_ctrl.sv  altdq_dqs2_stratixv_use_shadow_regs.sv  altdq_dqs2_wizard.lst  example.v  generate.tcl  soft_hr_ddio_out.v  wrapper.v  wrapper.vhd  wrapper_acv.v  wrapper_acv.vhd
altera/altera_16550_uart/: altera_16550_uart_hw.tcl  altera_16550_uart_sw.tcl
altera/altera_adv_seu_detection/: adv_seu_detection_hw.tcl  altera_adv_seu_detection_proc2_int.v  altera_adv_seu_detection_proc_ext.v  altera_adv_seu_detection_proc_int_no_ifdef_params.v  altera_adv_seu_detection_proc_int_region_tag.v  altera_adv_seu_detection_wizard.lst
altera/altera_asmi_parallel/: altera_asmi_parallel_hw.tcl  altera_asmi_parallel_hw_proc.tcl  altera_asmi_parallel_ui_settings.tcl  clearbox.tcl  migration_map_asmi.csv
altera/altera_avalon_i2c/: altera_avalon_i2c_hw.tcl  altera_avalon_i2c_sw.tcl
altera/altera_avalon_mailbox/: altera_avalon_mailbox_simple_hw.tcl  altera_avalon_mailbox_simple_sw.tcl
altera/altera_avalon_mm_passthru/: altera_avalon_passthru_core.v  altera_avalon_passthru_hw.tcl
altera/altera_crcerror_verify/: altera_crcerror_verify_top_core_interface.v  altera_crcerror_verify_top_core_interface_simulation.v  altera_crcerror_verify_top_no_ifdef_params.v  altera_crcerror_verify_top_simulation.v  crcerror_read_emr.v  crcerror_verify_core_core_interface.v  crcerror_verify_core_core_interface_simulation.v  crcerror_verify_core_no_ifdef_params.v  crcerror_verify_core_simulation.v  crcerror_verify_define.iv  crcerror_verify_hw.tcl  crcerror_verify_pin_assignments.tcl  crcerror_verify_wizard.lst
altera/altera_epcq_controller/: altera_epcq_controller.svd  altera_epcq_controller_fifo.v  altera_epcq_controller_hw.tcl  altera_epcq_controller_sw.tcl  (+2 more)
(+34137 files in other folders)
